update: rename brand

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Semarak Bakery — Toko Roti Harian</title>
+    <title>Azzuhrie Bakery — Toko Roti Harian</title>
 
     <!-- Bootstrap 5.3.8 (latest) -->
     <link
@@ -103,7 +103,7 @@
             <div class="d-flex flex-wrap gap-2">
               <a
                 class="btn btn-success btn-lg"
-                href="https://wa.me/6283140318095?text=Halo%20Semarak%20Bakery!%20Saya%20mau%20tanya%20stok%20dan%20jadwal%20pengantaran."
+                href="https://wa.me/6283140318095?text=Halo%20Azzuhrie%20Bakery!%20Saya%20mau%20tanya%20stok%20dan%20jadwal%20pengantaran."
                 target="_blank"
                 rel="noopener"
               >
@@ -182,7 +182,7 @@
                   <div class="fw-bold">Rp 18.000</div>
                   <a
                     class="btn btn-success mt-2 w-100"
-                    href="https://wa.me/6283140318095?text=Halo%20Semarak%20Bakery!%20Saya%20mau%20order%20Roti%20Tawar%20Susu%20(1%20pcs).%20Jumlah%3A%20%0ANama%3A%20%0AAlamat%3A%20%0AJam%20kirim%2Fambil%3A%20"
+                    href="https://wa.me/6283140318095?text=Halo%20Azzuhrie%20Bakery!%20Saya%20mau%20order%20Roti%20Tawar%20Susu%20(1%20pcs).%20Jumlah%3A%20%0ANama%3A%20%0AAlamat%3A%20%0AJam%20kirim%2Fambil%3A%20"
                     target="_blank"
                     rel="noopener"
                   >
@@ -209,7 +209,7 @@
                   <div class="fw-bold">Rp 20.000</div>
                   <a
                     class="btn btn-success mt-2 w-100"
-                    href="https://wa.me/6283140318095?text=Halo%20Semarak%20Bakery!%20Saya%20mau%20order%20Roti%20Gandum%20(1%20pcs).%20Jumlah%3A%20%0ANama%3A%20%0AAlamat%3A%20%0AJam%20kirim%2Fambil%3A%20"
+                    href="https://wa.me/6283140318095?text=Halo%20Azzuhrie%20Bakery!%20Saya%20mau%20order%20Roti%20Gandum%20(1%20pcs).%20Jumlah%3A%20%0ANama%3A%20%0AAlamat%3A%20%0AJam%20kirim%2Fambil%3A%20"
                     target="_blank"
                     rel="noopener"
                   >
@@ -236,7 +236,7 @@
                   <div class="fw-bold">Rp 16.000</div>
                   <a
                     class="btn btn-success mt-2 w-100"
-                    href="https://wa.me/6283140318095?text=Halo%20Semarak%20Bakery!%20Saya%20mau%20order%20Roti%20Sobek%20Cokelat%20(1%20pcs).%20Jumlah%3A%20%0ANama%3A%20%0AAlamat%3A%20%0AJam%20kirim%2Fambil%3A%20"
+                    href="https://wa.me/6283140318095?text=Halo%20Azzuhrie%20Bakery!%20Saya%20mau%20order%20Roti%20Sobek%20Cokelat%20(1%20pcs).%20Jumlah%3A%20%0ANama%3A%20%0AAlamat%3A%20%0AJam%20kirim%2Fambil%3A%20"
                     target="_blank"
                     rel="noopener"
                   >
@@ -263,7 +263,7 @@
                   <div class="fw-bold">Rp 17.000</div>
                   <a
                     class="btn btn-success mt-2 w-100"
-                    href="https://wa.me/6283140318095?text=Halo%20Semarak%20Bakery!%20Saya%20mau%20order%20Roti%20Keju%20(1%20pcs).%20Jumlah%3A%20%0ANama%3A%20%0AAlamat%3A%20%0AJam%20kirim%2Fambil%3A%20"
+                    href="https://wa.me/6283140318095?text=Halo%20Azzuhrie%20Bakery!%20Saya%20mau%20order%20Roti%20Keju%20(1%20pcs).%20Jumlah%3A%20%0ANama%3A%20%0AAlamat%3A%20%0AJam%20kirim%2Fambil%3A%20"
                     target="_blank"
                     rel="noopener"
                   >
@@ -290,7 +290,7 @@
                   <div class="fw-bold">Rp 19.000</div>
                   <a
                     class="btn btn-success mt-2 w-100"
-                    href="https://wa.me/6283140318095?text=Halo%20Semarak%20Bakery!%20Saya%20mau%20order%20Roti%20Sosis%20Mayo%20(1%20pcs).%20Jumlah%3A%20%0ANama%3A%20%0AAlamat%3A%20%0AJam%20kirim%2Fambil%3A%20"
+                    href="https://wa.me/6283140318095?text=Halo%20Azzuhrie%20Bakery!%20Saya%20mau%20order%20Roti%20Sosis%20Mayo%20(1%20pcs).%20Jumlah%3A%20%0ANama%3A%20%0AAlamat%3A%20%0AJam%20kirim%2Fambil%3A%20"
                     target="_blank"
                     rel="noopener"
                   >
@@ -317,7 +317,7 @@
                   <div class="fw-bold">Rp 19.000</div>
                   <a
                     class="btn btn-success mt-2 w-100"
-                    href="https://wa.me/6283140318095?text=Halo%20Semarak%20Bakery!%20Saya%20mau%20order%20Roti%20Abon%20Pedas%20(1%20pcs).%20Jumlah%3A%20%0ANama%3A%20%0AAlamat%3A%20%0AJam%20kirim%2Fambil%3A%20"
+                    href="https://wa.me/6283140318095?text=Halo%20Azzuhrie%20Bakery!%20Saya%20mau%20order%20Roti%20Abon%20Pedas%20(1%20pcs).%20Jumlah%3A%20%0ANama%3A%20%0AAlamat%3A%20%0AJam%20kirim%2Fambil%3A%20"
                     target="_blank"
                     rel="noopener"
                   >
@@ -387,7 +387,7 @@
           <div>
             <a
               class="btn btn-success mt-2 btn-lg"
-              href="https://wa.me/6283140318095?text=Halo%20Semarak%20Bakery!%20Saya%20mau%20order.%20Nama%3A%20%0AAlamat%3A%20%0AJam%20kirim%2Fambil%3A%20%0AList%20roti%3A%20"
+              href="https://wa.me/6283140318095?text=Halo%20Azzuhrie%20Bakery!%20Saya%20mau%20order.%20Nama%3A%20%0AAlamat%3A%20%0AJam%20kirim%2Fambil%3A%20%0AList%20roti%3A%20"
               target="_blank"
               rel="noopener"
             >
